Fixed CSS3 with overflow:hidden

--- a/src/components/css/pages.module.css
+++ b/src/components/css/pages.module.css
@@ -7,11 +7,8 @@
 }
 
 .circular-image {
-    /* border-radius: 50%; */
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
+    border-radius: 50%;
+    overflow: hidden;
     display: inline-block;
     width: 50%; 
  }
@@ -103,6 +100,7 @@ h2 {
 }
 .girlfriend-image{
     border-radius: 50%;
+    overflow: hidden;
     display: inline-block;
     margin: auto;
     width: 150px; 
